# TUI

./: CMakeLists.txt  README.md
include/: TUI_Error.h  TUI_Render.h  TUI_Symbols.h
tests/: color.c  renderer.c
